# pal

./: configure.ac
benchmark/: benchmark.c
include/: common.h  pal_base.h
src/base/: p_run.c  pal_base_private.h
src/base/devices/: Makefile.am
src/base/devices/pthreads/: Makefile.am  device.c  device.h
